fix naming, use enum for role and set error message in case of signup