@@ -1,4 +1,4 @@
-package com.thanhnt.cinemasystem.facade.Impl;
+package com.thanhnt.cinemasystem.facade.impl;
 
 import com.thanhnt.cinemasystem.entity.Role;
 import com.thanhnt.cinemasystem.entity.User;
@@ -6,7 +6,7 @@ import com.thanhnt.cinemasystem.enums.ErrorCode;
 import com.thanhnt.cinemasystem.enums.RoleUser;
 import com.thanhnt.cinemasystem.exception.LoginException;
 import com.thanhnt.cinemasystem.exception.SignupException;
-import com.thanhnt.cinemasystem.facade.UserFace;
+import com.thanhnt.cinemasystem.facade.UserFacade;
 import com.thanhnt.cinemasystem.request.LoginRequest;
 import com.thanhnt.cinemasystem.request.SignupRequest;
 import com.thanhnt.cinemasystem.response.BaseResponse;
@@ -14,8 +14,9 @@ import com.thanhnt.cinemasystem.response.LoginResponse;
 import com.thanhnt.cinemasystem.response.SignupResponse;
 import com.thanhnt.cinemasystem.security.SecurityUserDetails;
 import com.thanhnt.cinemasystem.service.JWTService;
+import com.thanhnt.cinemasystem.service.RoleService;
 import com.thanhnt.cinemasystem.service.UserService;
-import java.util.stream.Collectors;
+import java.util.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -26,12 +27,13 @@ import org.springframework.stereotype.Service;
 
 @RequiredArgsConstructor
 @Service
-public class UserFaceImpl implements UserFace {
+public class UserFacadeImpl implements UserFacade {
 
   private final AuthenticationManager authenticationManager;
   private final UserService userService;
   private final JWTService jwtService;
   private final PasswordEncoder passwordEncoder;
+  private final RoleService roleService;
 
   @Override
   public BaseResponse<LoginResponse> login(LoginRequest request) {
@@ -39,49 +41,57 @@ public class UserFaceImpl implements UserFace {
         authenticationManager.authenticate(
             new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword()));
     SecurityContextHolder.getContext().setAuthentication(authentication);
-    User user = userService.findByEmail(request.getEmail());
+    Optional<User> user = userService.findByEmail(request.getEmail());
 
-    boolean isActive = user.isActive();
-    if (!isActive) {
-      throw new LoginException(ErrorCode.ACCOUNT_IS_DEACTIVATED);
-    }
+    boolean isActive = user.isPresent();
+    if (!isActive) throw new LoginException(ErrorCode.USER_IS_DEACTIVATED);
+
     SecurityUserDetails userPrinciple = (SecurityUserDetails) authentication.getPrincipal();
-    return BaseResponse.build(buildLoginResponse(userPrinciple, user), true);
+    return BaseResponse.build(buildLoginResponse(userPrinciple, user.get()), true);
   }
 
   @Override
-  public BaseResponse<SignupResponse> signup(SignupRequest request) {
-    if (userService.validSignup(request)) {
-      throw new SignupException(ErrorCode.SIGNUP_IS_FAILED);
-    }
-    User user = new User();
-    user.setEmail(request.getEmail());
-    user.setPassword(passwordEncoder.encode(request.getPassword()));
-    user.setName(request.getName());
-    user.setPhone(request.getPhone());
-    user.setDateOfBirth(request.getDateOfBirth());
+  public BaseResponse<SignupResponse> signUp(SignupRequest request) {
+    ErrorCode validationError = userService.validateSignUp(request);
+    if (validationError != null) throw new SignupException(validationError);
+
+    User user =
+        User.builder()
+            .email(request.getEmail())
+            .password(passwordEncoder.encode(request.getPassword()))
+            .name(request.getName())
+            .phone(request.getPhone())
+            .dateOfBirth(request.getDateOfBirth())
+            .build();
+
+    Role userRole = roleService.findRole(RoleUser.ROLE_USER);
+
+    user.addRole(userRole);
+
     userService.signup(user);
     return BaseResponse.build(buildSignupResponse(user), true);
   }
 
   private LoginResponse buildLoginResponse(SecurityUserDetails userDetails, User user) {
-    LoginResponse loginResponse = jwtService.generateToken(userDetails);
-    loginResponse.setId(user.getId());
-    loginResponse.setEmail(user.getEmail());
-    loginResponse.setPhone(user.getPhone());
-    loginResponse.setName(user.getName());
-    loginResponse.setRoleUsers(
-        user.getRoles().stream()
-            .map(Role::getName)
-            .map(RoleUser::getRoleName)
-            .collect(Collectors.toList()));
-    return loginResponse;
+    var accessToken = jwtService.generateAccessToken(userDetails);
+    var refreshToken = jwtService.generateRefreshToken(userDetails);
+
+    List<RoleUser> roleUsers = user.getRoles().stream().map(Role::getName).toList();
+
+    return LoginResponse.builder()
+        .id(user.getId())
+        .email(user.getEmail())
+        .phone(user.getPhone())
+        .name(user.getName())
+        .accessToken(accessToken)
+        .refreshToken(refreshToken)
+        .roleUsers(roleUsers)
+        .build();
   }
 
   private SignupResponse buildSignupResponse(User user) {
     SignupResponse signupResponse = new SignupResponse();
     signupResponse.setEmail(user.getEmail());
-    signupResponse.setPhone(user.getPhone());
     return signupResponse;
   }
 }
